RESOLVED FIXED57857
REGRESSION (r82849): 85,000+ JSC-related leaks seen on SnowLeopard Intel Leaks
https://bugs.webkit.org/show_bug.cgi?id=57857
Summary REGRESSION (r82849): 85,000+ JSC-related leaks seen on SnowLeopard Intel Leaks
Attachments
Patch (1.44 KB, patch)
2011-04-05 14:32 PDT, Oliver Hunt
darin: review+
Adam Roben (:aroben)
Comment 1 2011-04-05 09:54:45 PDT
Oliver Hunt
Comment 2 2011-04-05 13:32:33 PDT
Clearly we're just leaking structures like there's no tomorrow.
Oliver Hunt
Comment 3 2011-04-05 14:32:30 PDT
Oliver Hunt
Comment 4 2011-04-05 15:02:02 PDT
Committed r82986
Note You need to log in before you can comment on or make changes to this bug.