2011-04-05  Oliver Hunt  <oliver@apple.com>

Reviewed by Darin Adler.

        REGRESSION (r82849): 85,000+ JSC-related leaks seen on SnowLeopard Intel Leaks
        https://bugs.webkit.org/show_bug.cgi?id=57857

        Whoops, accidentally removed a deref().

        * bytecode/StructureStubInfo.cpp:
        (JSC::StructureStubInfo::deref):

Canonical link: https://commits.webkit.org/72768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82986 268f45cc-cd09-0410-ab3c-d52691b4dbfc